--- a/index.html
+++ b/index.html
@@ -1,10 +1,53 @@
 <!doctype html>
-<html lang="">
+<html lang="id">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>adamovie</title>
+
+    <!-- ================== SEO META TAGS ================== -->
+
+    <!-- 1. Judul Halaman (Penting untuk SEO) -->
+    <title>AdamMovie - Jelajahi Dunia Film & TV Shows</title>
+
+    <!-- 2. Deskripsi Situs -->
+    <meta
+      name="description"
+      content="Temukan film populer, top rated, dan acara TV favorit Anda di AdamMovie. Jelajahi galeri lengkap dengan rating, trailer, dan detail sinopsis."
+    />
+
+    <!-- 3. Kata Kunci -->
+    <meta
+      name="keywords"
+      content="film, movie, tv show, galeri film, database film, sinopsis, trailer, rating film, adamovie"
+    />
+
+    <!-- 4. Open Graph Tags (untuk Facebook, LinkedIn, Discord, dll.) -->
+    <meta property="og:title" content="AdamMovie - Jelajahi Dunia Film & TV Shows" />
+    <meta
+      property="og:description"
+      content="Temukan film populer, top rated, dan acara TV favorit Anda di AdamMovie."
+    />
+    <meta
+      property="og:image"
+      content="https://placehold.co/1200x630/141414/ffffff?text=AdamMovie"
+    />
+    <meta property="og:url" content="https://movie-gallery-theta.vercel.app/" />
+    <meta property="og:type" content="website" />
+
+    <!-- 5. Twitter Card Tags (untuk Twitter) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="AdamMovie - Jelajahi Dunia Film & TV Shows" />
+    <meta
+      name="twitter:description"
+      content="Temukan film populer, top rated, dan acara TV favorit Anda di AdamMovie."
+    />
+    <meta
+      name="twitter:image"
+      content="https://placehold.co/1200x630/141414/ffffff?text=AdamMovie"
+    />
+
+    <!-- =================================================== -->
   </head>
   <body>
     <div id="app"></div>
