--- a/index.html
+++ b/index.html
@@ -2,27 +2,23 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- ================== SEO META TAGS ================== -->
-
-    <!-- 1. Judul Halaman (Penting untuk SEO) -->
     <title>AdamMovie - Jelajahi Dunia Film & TV Shows</title>
 
-    <!-- 2. Deskripsi Situs -->
     <meta
       name="description"
       content="Temukan film populer, top rated, dan acara TV favorit Anda di AdamMovie. Jelajahi galeri lengkap dengan rating, trailer, dan detail sinopsis."
     />
 
-    <!-- 3. Kata Kunci -->
     <meta
       name="keywords"
       content="film, movie, tv show, galeri film, database film, sinopsis, trailer, rating film, adamovie"
     />
 
-    <!-- 4. Open Graph Tags (untuk Facebook, LinkedIn, Discord, dll.) -->
     <meta property="og:title" content="AdamMovie - Jelajahi Dunia Film & TV Shows" />
     <meta
       property="og:description"
@@ -35,7 +31,6 @@
     <meta property="og:url" content="https://movie-gallery-theta.vercel.app/" />
     <meta property="og:type" content="website" />
 
-    <!-- 5. Twitter Card Tags (untuk Twitter) -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="AdamMovie - Jelajahi Dunia Film & TV Shows" />
     <meta
@@ -46,8 +41,6 @@
       name="twitter:image"
       content="https://placehold.co/1200x630/141414/ffffff?text=AdamMovie"
     />
-
-    <!-- =================================================== -->
   </head>
   <body>
     <div id="app"></div>
